demo-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web
spec:
  ingressClassName: nginx # NÉLKÜLE az nginx figyelmen kívül hagyja!
  rules:
    - host: demo.lab.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-web
              port:
                number: 80 # a Service portja, NEM a konténer portj
